--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -3,17 +3,17 @@
   directory: lolz
   preview:
     filename: 1.png
-    original: 1-thumbnail.jpg
+    original: 1.png
     sizes:
-    - 1-thumbnail.jpg
-    thumbnail: 1-thumbnail.jpg
+    - 1.png
+    thumbnail: 1.png
 
 -
   title: React
   directory: react
   preview:
-    filename: 1.png
-    original: 1-thumbnail.jpg
+    filename: 2.jpg
+    original: 2.jpg
     sizes:
-    - 1-thumbnail.jpg
-    thumbnail: 1-thumbnail.jpg
+    - 2.jpg
+    thumbnail: 2.jpg
